<resources>
    <string name="app_name">Make My Way</string>
    <string name="title_activity_main">Make My Way</string>
    <string name="title_activity_on_boarding">Make My Way</string>
    <string name="title_activity_login">Connection</string>
    <string name="title_activity_register">Inscription</string>
    <string name="title_activity_home">Voyages</string>
    <string name="title_activity_trip_creation">Nouveau voyage</string>
    <string name="title_activity_trip_detail">Etapes de mon voyage</string>
    <string name="title_activity_stage_creation">Nouvelle étape</string>
    <string name="title_activity_profile_update">Mon profil</string>
    <string name="title_activity_user_update">Mise à jour de mon profile</string>

    <!-- General -->
    <string name="form_fields_invalid">Les champs ne sont pas valides.</string>
    <string name="form_field_error_mandatory">Ce champ est obligatoire</string>
    <string name="form_field_error_email_invalid">Cet email n\'est pas valide</string>
    <string name="form_field_error_password_too_short">Votre mot de passe est trop court</string>

    <!-- OnBoarding -->
    <string name="on_boarding_go_to_login_btn">Me connecter</string>
    <string name="on_boarding_go_to_register_btn">M\'inscrire</string>

    <string name="register_first_name_hint">Prénom</string>
    <string name="register_last_name_hint">Nom</string>
    <string name="register_email_hint">E-mail</string>
    <string name="register_password_hint">Mode de passe</string>

    <!-- Login -->
    <string name="login_failure">L\'email et/ou le password ne sont pas valides</string>

    <string name="title_home">Populaire</string>
    <string name="title_dashboard">Favoris</string>
    <string name="title_profile">Profile</string>

    <!-- Pick picture -->
    <string name="pickPictureIntent">Sélectionner une photo</string>
    <string name="pickPicturePermissionRefused">Make My Way a besoin d\'accèder à vos photos pour fonctionner</string>

    <!-- Trip creation-->
    <string name="tripCreationIntroTitle">Nouveau voyage</string>
    <string name="tripCreationTitle">Donner un titre à votre voyage</string>
    <string name="tripCreationTitleHint">Mon road trip en asie…</string>
    <string name="tripCreationDescription">Vous pouvez y ajouter une description</string>
    <string name="tripCreationDescriptionHint">Voyage inoubliable en asie du sud-est</string>
    <string name="tripCreationBtn">Démarrer mon voyage</string>

    <!-- Stage creation -->
    <string name="stageCreationAddPicture">Ajouter une photo</string>
    <string name="stageImageDescription">Lier un photo à l\'étape</string>
    <string name="stageCreationTitle">Donner un titre à votre étape</string>
    <string name="stageCreationTitleHint">Temple bouddhiste</string>
    <string name="stageCreationDescription">Vous pouvez y ajouter une description</string>
    <string name="stageCreationDescriptionHint">Paix et sérénité règne dans ce temple. Magnifique!</string>
    <string name="stageSpinner">Comment était votre étape ?</string>
    <string-array name="stageType">
        <item>Culturelle</item>
        <item>Familiale</item>
        <item>Festive</item>
        <item>Gourmande</item>
        <item>Relaxante</item>
        <item>Sportive</item>
        <item>Divertissante</item>
        <item>Autre…</item>
    </string-array>
    <string name="stageCreationBtn">Valider cette étape</string>
    <string name="stageCreationNoTitleError">Choissisez un titre à cette étape</string>
    <string name="stageCreationTitleTooShort">Ce titre est trop court</string>
    <string name="stageCreationNoPicture">Une photo est obligatoire pour valider une étape</string>
    <string name="stageCreationNoTripId">L\'étape n\'est rattachée à aucun voyage</string>


    <!-- Trip View -->
    <string name="tripImageDescription">Image principale du voyage</string>

    <!-- Trip Detail -->
    <string name="tripDetailMainPictureDescription">Photo principale du voyage</string>

    <!-- Profile Detail -->
    <string name="profileImageVwDescription">Photo de profile</string>
    <string name="settingsImageVwDescription">Edit profile</string>
    <string name="title_activity_picture_swipe">PictureSwiperActivity</string>

    <!-- Profile Update -->
    <string name="profileUpdateBtn">Mettre à jour mon profile</string>
    <string name="profilePseudoHint">Pseudo</string>
    <string name="profileDescriptionHint">Description</string>
    <string name="profileContentDescription">Mettre à jour ma photo de profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
