<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mmw.activity.tripCreation.TripCreationViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            tools:context="com.mmw.activity.tripCreation.TripCreationActivity">

            <TextView
                android:id="@+id/createTripIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/tripCreationIntroTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tripTitleTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/tripCreationTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createTripIntro" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tripTitleTxtInputLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                app:errorTextAppearance="@style/ErrorTxtAppearance"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripTitleTxtVw"
                bind:error="@{viewModel.titleError}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/titleTripTxtInputEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tripCreationTitleHint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:text="@={viewModel.title}"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    bind:focus="@{viewModel.titleRequestFocus}" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tripDescriptionTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tripCreationDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripTitleTxtInputLyt" />

            <EditText
                android:id="@+id/tripDescriptionTxtInputLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                android:gravity="top"
                android:hint="@string/tripCreationDescriptionHint"
                android:inputType="textCapSentences|textMultiLine"
                android:minLines="3"
                android:text="@={viewModel.description}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripDescriptionTxtVw" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:onClick="@{viewModel::onClickStart}"
                android:text="@string/tripCreationBtn"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_plain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripDescriptionTxtInputLyt" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack24"
                android:visibility="@{viewModel.dataLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ProgressBar
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{viewModel.dataLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>

