<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mmw.activity.stageCreation.StageCreationViewModel" />

        <variable
            name="activity"
            type="com.mmw.activity.stageCreation.StageCreationActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:paddingBottom="48dp"
            tools:context="com.mmw.activity.stageCreation.StageCreationActivity">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_camera_enhance_120dp"
                app:layout_constraintBottom_toTopOf="@+id/addressTxtVw"
                app:layout_constraintEnd_toEndOf="@+id/stageImgVw"
                app:layout_constraintStart_toStartOf="@+id/stageImgVw" />

            <TextView
                android:id="@+id/pictureTxtVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/stageCreationAddPicture"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/dateTxtVw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/stageImgVw"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:background="@color/colorBlack24"
                android:contentDescription="@string/stageImageDescription"
                android:onClick="@{activity::onClickPicture}"
                bind:imageUrl="@{viewModel.picturePath}" />

            <TextView
                android:id="@+id/addressTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@{viewModel.address}"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintBottom_toTopOf="@+id/dateTxtVw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/dateTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@{viewModel.formattedDate}"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintBottom_toBottomOf="@+id/stageImgVw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"  />

            <TextView
                android:id="@+id/stageTitleTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/stageCreationTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stageImgVw" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/stageTitleTxtInputLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                app:errorTextAppearance="@style/ErrorTxtAppearance"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stageTitleTxtVw"
                bind:error="@{viewModel.titleError}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/stageTripTxtInputEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/stageCreationTitleHint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:singleLine="true"
                    android:text="@={viewModel.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    bind:focus="@{viewModel.titleRequestFocus}" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/stageDescriptionTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/stageCreationDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stageTitleTxtInputLyt" />

            <EditText
                android:id="@+id/stageDescriptionTxtInputLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/white"
                android:gravity="top"
                android:hint="@string/stageCreationDescriptionHint"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:inputType="textCapSentences|textMultiLine"
                android:minLines="3"
                android:text="@={viewModel.comment}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stageDescriptionTxtVw" />

            <RatingBar
                android:id="@+id/stageRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:numStars="6"
                android:stepSize="1"
                android:onRatingChanged="@{activity::onRatingChanged}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stageDescriptionTxtInputLyt" />

            <TextView
                android:id="@+id/stageTypeTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/stageSpinner"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stageRatingBar" />

            <Spinner
                android:id="@+id/stageTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:entries="@array/stageType"
                android:onItemSelected="@{activity::onItemSelected}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stageTypeTxtVw" />

            <Button
                android:id="@+id/validStageBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:onClick="@{viewModel::onClickValidate}"
                android:text="@string/stageCreationBtn"
                android:textAllCaps="false"
                android:background="@drawable/btn_plain"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stageTypeSpinner" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/colorBlack24"
                android:visibility="@{viewModel.dataLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ProgressBar
                android:id="@+id/progressBar2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{viewModel.dataLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>
